--- a/Gridworld/gridworld.ipynb
+++ b/Gridworld/gridworld.ipynb
@@ -31,15 +31,15 @@
     "            L4 = j + 1 > 4\n",
     "\n",
     "            if i == 0 and j == 1:\n",
-    "                f = x[k(i,j)] - (0.9*x[k(4,1)]+10)\n",
+    "                f = x[i,j] - (0.9*x[k(4,1)]+10)\n",
     "            elif i == 0 and j == 3:\n",
-    "                f = x[k(i,j)] - (0.9*x[k(2,3)]+5)\n",
+    "                f = x[i,j] - (0.9*x[k(2,3)]+5)\n",
     "            else:\n",
-    "                e1 = (x[k(i,j)]-1 if L1 else 0.9*x[k(i-1,j)])\n",
-    "                e2 = (x[k(i,j)]-1 if L2 else 0.9*x[k(i+1,j)])\n",
-    "                e3 = (x[k(i,j)]-1 if L3 else 0.9*x[k(i,j-1)])\n",
-    "                e4 = (x[k(i,j)]-1 if L4 else 0.9*x[k(i,j+1)])\n",
-    "                f = x[k(i,j)] - max([e1,e2,e3,e4])\n",
+    "                e1 = (x[i,j]-1 if L1 else 0.9*x[k(i-1,j)])\n",
+    "                e2 = (x[i,j]-1 if L2 else 0.9*x[k(i+1,j)])\n",
+    "                e3 = (x[i,j]-1 if L3 else 0.9*x[k(i,j-1)])\n",
+    "                e4 = (x[i,j]-1 if L4 else 0.9*x[k(i,j+1)])\n",
+    "                f = x[i,j] - max([e1,e2,e3,e4])\n",
     "\n",
     "            fns.append(f)\n",
     "    return fns"
@@ -94,17 +94,17 @@
     "            L3 = j - 1 < 0\n",
     "            L4 = j + 1 > 4\n",
     "\n",
-    "            A[k(i,j), k(i,j)] = 1 - g/4*(L1 + L2 + L3 + L4)\n",
+    "            A[i,j, i,j] = 1 - g/4*(L1 + L2 + L3 + L4)\n",
     "            if not L1:\n",
-    "                A[k(i,j), k(i-1,j)] = -g/4\n",
+    "                A[i,j, k(i-1,j)] = -g/4\n",
     "            if not L2:\n",
-    "                A[k(i,j), k(i+1,j)] = -g/4\n",
+    "                A[i,j, k(i+1,j)] = -g/4\n",
     "            if not L3:\n",
-    "                A[k(i,j), k(i,j-1)] = -g/4\n",
+    "                A[i,j, k(i,j-1)] = -g/4\n",
     "            if not L4:\n",
-    "                A[k(i,j), k(i,j+1)] = -g/4\n",
+    "                A[i,j, k(i,j+1)] = -g/4\n",
     "\n",
-    "            b[k(i,j)] = -(L1 + L2 + L3 + L4)/4\n",
+    "            b[i,j] = -(L1 + L2 + L3 + L4)/4\n",
     "\n",
     "    A[k(0,1),:] = 0\n",
     "    A[k(0,1), k(0,1)] = 1\n",
@@ -149,6 +149,117 @@
    "source": [
     "np.set_printoptions(precision=1)\n",
     "print(x.reshape((5,5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def randomPolicy(state, actionSpace):\n",
+    "    return np.full(actionSpace.shape, 1 / len(actionSpace))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2 0.2 0.2 0.2]\n",
+      "(4,)\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(randomPolicy(1, np.ones(4)))\n",
+    "print(np.ones(4).shape)\n",
+    "print(len(np.ones(4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policyEvalIter(policy, statesShape, gamma, eps):\n",
+    "    v = np.ones(statesShape)\n",
+    "    vOld = 0\n",
+    "    res = 1.1*eps\n",
+    "    iter = 0\n",
+    "    k = lambda i, j : 5 * i + j\n",
+    "    while True:\n",
+    "        res = 0\n",
+    "        for i in range(5):\n",
+    "            for j in range(5): \n",
+    "                vOld = v[i,j]\n",
+    "                L1 = i - 1 < 0\n",
+    "                L2 = i + 1 > 4\n",
+    "                L3 = j - 1 < 0\n",
+    "                L4 = j + 1 > 4\n",
+    "                actions = randomPolicy(k(i,j), np.ones(4))\n",
+    "\n",
+    "                if i == 0 and j == 1:\n",
+    "                    v[i,j] = 10 + gamma*(v[4,1])\n",
+    "                elif i == 0 and j == 3:\n",
+    "                    v[i,j] = 5 + gamma*(v[2,3])\n",
+    "                else:\n",
+    "                    update = 0\n",
+    "                    for index, a in np.ndenumerate(actions):\n",
+    "                        if index[0] == 0:\n",
+    "                            update = update + a * (-1 if L1 else 0 + gamma*(v[i,j] if L1 else v[i-1,j]))\n",
+    "                        elif index[0] == 1:\n",
+    "                            update = update + a * (-1 if L2 else 0 + gamma*(v[i,j] if L2 else v[i+1,j]))\n",
+    "                        elif index[0] == 2:\n",
+    "                            update = update + a * (-1 if L3 else 0 + gamma*(v[i,j] if L3 else v[i,j-1]))\n",
+    "                        elif index[0] == 3:\n",
+    "                            update = update + a * (-1 if L4 else 0 + gamma*(v[i,j] if L4 else v[i,j+1]))\n",
+    "                    v[i,j] = update\n",
+    "\n",
+    "                res = max([res, abs(vOld - v[i,j])])\n",
+    "        iter = iter + 1\n",
+    "        if res < eps:\n",
+    "            break\n",
+    "    return v, iter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v, iter = policyEvalIter(randomPolicy, (5,5), 0.9, 0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.8  9.5  3.6  5.5  0.8]\n",
+      " [ 0.9  3.   2.1  1.9  0.3]\n",
+      " [ 0.   0.9  0.8  0.6 -0.2]\n",
+      " [-0.4  0.   0.1 -0.1 -0.5]\n",
+      " [-0.7 -0.5 -0.5 -0.5 -0.7]]\n",
+      "iter = 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.set_printoptions(precision=1, suppress=True)\n",
+    "print(v)\n",
+    "print(\"iter = {}\".format(iter))"
    ]
   }
  ],
